Terumo Partdev/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <description>Application UI: used to determine the business the product belongs to</description>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Factor_ccit1__c</fullName>
        <description>Application UI: this field is used to indicate the sales unit</description>
        <label>Form Factor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Application UI: used to show what type of product the record is</description>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <description>Application UI: used to indicate the profit center for the product</description>
        <label>Profit Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_ccit1__c</fullName>
        <description>Application UI: field is used to determine the base unit of measure.</description>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>